Issue #9: complete Stream 4 advanced features and integration
Implements comprehensive advanced Panama FFI features:

- Host function callbacks with Panama upcall stubs and type-safe marshalling
- Thread-safe concurrent access coordination with optimistic patterns
- Advanced performance optimization through method handle specialization
- Comprehensive unit test coverage for all FFI wrapper classes
- Complete public API integration via factory pattern
- Graceful fallback detection for Java 23+ availability
- Performance benchmarks demonstrating Panama advantages over JNI

All Stream 4 tasks completed with production-grade quality and performance.